--- a/app.json
+++ b/app.json
@@ -4,24 +4,32 @@
     "slug": "tlf-trackerx",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/icon-v2.png",
     "scheme": "tlftrackerx",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.daniel.tlftrackerx"
+      "icon": "./assets/images/icon-v2.png",
+      "bundleIdentifier": "com.daniel.tlftrackerx",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "package": "com.daniel.tlftrackerx",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/icon.png",
+        "foregroundImage": "./assets/images/icon-v2.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
+    },
+    "notification": {
+      "icon": "./assets/images/icon-v2.png",
+      "color": "#6D4BFF"
     },
     "web": {
       "output": "static",
@@ -32,7 +40,7 @@
       [
         "expo-notifications",
         {
-          "icon": "./assets/images/icon.png",
+          "icon": "./assets/images/icon-v2.png",
           "color": "#6D4BFF",
           "defaultChannel": "price-alerts",
           "sounds": []
@@ -41,7 +49,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/icon.png",
+          "image": "./assets/images/icon-v2.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
@@ -54,6 +62,18 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "f0f33658-6ce2-4053-812b-993ed3bc4e61"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/f0f33658-6ce2-4053-812b-993ed3bc4e61"
     }
   }
 }
