Fix web data providers: stooq fallback + web stock pipeline hardening

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,9 @@
     "api/http.js": {
       "maxDuration": 15
     },
+    "api/stooq.js": {
+      "maxDuration": 15
+    },
     "api/yfinance.py": {
       "maxDuration": 20
     }
