--- a/app.json
+++ b/app.json
@@ -12,12 +12,14 @@
       "supportsTablet": true,
       "icon": "./assets/images/icon-v2.png",
       "bundleIdentifier": "com.daniel.tlftrackerx",
+      "buildNumber": "1",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
       "package": "com.daniel.tlftrackerx",
+      "versionCode": 1,
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/icon-v2.png",
